--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "fastify": "^5.2.0",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
     "postgres": "^3.4.5"
   },
   "devDependencies": {
